Fix reset button
Reset button still held old functionality resulting in unwanted behaviour of the current of the app.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> (Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20230106.1</span> <br>
+					Version: <span id="currentappversion">20230216.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>
 			</div>
@@ -686,7 +686,10 @@
 					<p class="mb-0">
 						Bugfixes
 						<ul>
-							<li>/</li>
+							<li>Replaced obsolete jshint checks for eslint.</li>
+							<li>Make it possible to store up to 99999 days instead of 999.</li>
+							<li>Fix footer on small screens overlapping functionality.</li>
+							<li>Reset button still held old functionality resulting in unwanted behaviour of the current of the app.</li>
 						</ul>
 					</p>
 				</div>
