--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,9 @@
 		<!-- Footer HTML -->
 		<div id="footer" class="row fixed-bottom px-3 py-1">
 			<div class="col d-flex align-self-center">
-				<span class="mx-2">Senne Janssens &#169; 2023</span>
+				<span class="mx-2">Senne Janssens &#169;
+					<span id="year_span"></span>
+				</span>
 			</div>
 			<div class="col d-flex justify-content-end">
 				<div id="footer_button_group" class="btn-group align-self-center" role="group">
