--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20241025.1</span> <br>
+						Version: <span id="currentappversion">20241031.1</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -822,6 +822,9 @@
 								Another attempt at fixing an annoying bug where adding time to the start time would
 								result in not actually adding all time correctly. For example, when opening the page and
 								having a start time at 8:00, the end time could've been 15:59.
+							</li>
+							<li>
+								Various bugfixes regarding the reworked dark mode and graphs.
 							</li>
 						</ul>
 						</p>
