--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20250219.1</span> <br>
+						Version: <span id="currentappversion">20250410.1</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -258,7 +258,7 @@
 				</div>
 				<div class="modal-body">
 					<p>
-						Use Google Chrome or Firefox for optimal results. Let's be honest here... Edge or IE are crap.
+						Use Google Chrome, Firefox or any non-microsoft browser for optimal results. Let's be honest here... Edge or IE are crap.
 					<p>
 					<p>
 						Set this page as your browser startup page or pin the tab to automatically start counting when
@@ -308,9 +308,11 @@
 								<a class="btn btn-outline-secondary btn-sm" target="_blank"
 									href="sample_data/working_history_sample_data.json">Download Sample Data</a>
 							</div>
-						</div>
+						</div>			
 					</div>
-					<br>
+					<p class="mt-3">
+						You can download the example as a '.json' file and import it into the application.
+					</p>
 					<form class="mb-3">
 						<div class="form-check">
 							<input type="checkbox" class="form-check-input" id="autobackupoption"
@@ -346,12 +348,23 @@
 							</div>
 						</div>
 					</form>
-					You can download the example as a '.json' file and import it into the application.
 					</p>
 					<p>
 					<h4>Parameters</h4>
 					The value settings are saved. So if you enable something it will still be enabled on the next
 					opening of the page.
+					</p>
+					<p>
+						<i>Custom "Overtime @ ..."</i><br>
+						&emsp;will set a custom hourschedule option so you can enter specific values that aren't in the defaults.
+					<div class="mb-3">
+						<div class="input-group">
+							<label class="col-form-label" for="customhourschedule_value">Hour schedule: </label>
+							<input type="number" name="customhourschedule_value" id="customhourschedule_value"
+								class="form-control flex-grow-0 w-f-80 col-2 mx-1" placeholder="0" min="0" max="24"
+								onchange="setCustomHourSchedule(this.value)">
+						</div>
+					</div>
 					</p>
 					<p>
 						<i>"Don't save today."</i><br>
@@ -808,6 +821,9 @@
 							<li>
 								Added option to not save this current session instead of only the entire day. This allows to reload the window without needing to uncheck the today box.
 							</li>
+							<li>
+								Added option for custom hour schedule. In the settings you can now enter any value (0 - 24h) so you can have options that aren't in de defaults.
+							</li>
 						</ul>
 						</p>
 						<p class="mb-0">
@@ -914,25 +930,19 @@
 										<option value="0">0h &ensp;&nbsp;&emsp;&emsp;&emsp;(working overtime)</option>
 										<option value="3.04">3,04h &ensp;&emsp;&emsp;(part-time 2/5, 38h week)</option>
 										<option value="3.12">3,12h &ensp;&emsp;&emsp;(part-time 2/5, 39h week)</option>
-										<option value="3.2">3,2h &ensp;&ensp;&emsp;&emsp;(part-time 2/5, 40h week)
-										</option>
+										<option value="3.2">3,2h &ensp;&ensp;&emsp;&emsp;(part-time 2/5, 40h week)</option>
 										<option value="3.8">3,8h &ensp;&ensp;&emsp;&emsp;(half-time, 38h week)</option>
 										<option value="3.9">3,9h &ensp;&ensp;&emsp;&emsp;(half-time, 39h week)</option>
-										<option value="4">4h &ensp;&nbsp;&emsp;&emsp;&emsp;(half-time, 40h week)
-										</option>
+										<option value="4">4h &ensp;&nbsp;&emsp;&emsp;&emsp;(half-time, 40h week)</option>
 										<option value="4.56">4,56h &ensp;&emsp;&emsp;(part-time 3/5, 38h week)</option>
 										<option value="4.68">4,68h &ensp;&emsp;&emsp;(part-time 3/5, 39h week)</option>
-										<option value="4.8">4,8h &ensp;&ensp;&emsp;&emsp;(part-time 3/5, 40h week)
-										</option>
+										<option value="4.8">4,8h &ensp;&ensp;&emsp;&emsp;(part-time 3/5, 40h week)</option>
 										<option value="6.08">6,08h &ensp;&emsp;&emsp;(part-time 4/5, 38h week)</option>
 										<option value="6.24">6,24h &ensp;&emsp;&emsp;(part-time 4/5, 39h week)</option>
-										<option value="6.4">6,4h &ensp;&ensp;&emsp;&emsp;(part-time 4/5, 40h week)
-										</option>
-										<option value="7.6" selected>7,6h &ensp;&ensp;&emsp;&emsp;(full-time, 38h week)
-										</option>
+										<option value="6.4">6,4h &ensp;&ensp;&emsp;&emsp;(part-time 4/5, 40h week)</option>
+										<option value="7.6" selected>7,6h &ensp;&ensp;&emsp;&emsp;(full-time, 38h week)</option>
 										<option value="7.8">7,8h &ensp;&ensp;&emsp;&emsp;(full-time, 39h week)</option>
-										<option value="8">8h &ensp;&nbsp;&emsp;&emsp;&emsp;(full-time, 40h week)
-										</option>
+										<option value="8">8h &ensp;&nbsp;&emsp;&emsp;&emsp;(full-time, 40h week)</option>
 										<!--
 										&nbsp; (adds a single space)
 										&ensp; (about the width of two normal spaces)
