--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Bootstrap -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
-		defer></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+		crossorigin="anonymous"></script>
 	<!-- Glow Cookies -->
 	<script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.8/src/glowCookies.min.js"></script>
 	<script>
@@ -58,7 +58,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20250410.1</span> <br>
+						Version: <span id="currentappversion">20250428.1</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -258,7 +258,8 @@
 				</div>
 				<div class="modal-body">
 					<p>
-						Use Google Chrome, Firefox or any non-microsoft browser for optimal results. Let's be honest here... Edge or IE are crap.
+						Use Google Chrome, Firefox or any non-microsoft browser for optimal results. Let's be honest
+						here... Edge or IE are crap.
 					<p>
 					<p>
 						Set this page as your browser startup page or pin the tab to automatically start counting when
@@ -308,7 +309,7 @@
 								<a class="btn btn-outline-secondary btn-sm" target="_blank"
 									href="sample_data/working_history_sample_data.json">Download Sample Data</a>
 							</div>
-						</div>			
+						</div>
 					</div>
 					<p class="mt-3">
 						You can download the example as a '.json' file and import it into the application.
@@ -356,7 +357,8 @@
 					</p>
 					<p>
 						<i>Custom "Overtime @ ..."</i><br>
-						&emsp;will set a custom hourschedule option so you can enter specific values that aren't in the defaults.
+						&emsp;will set a custom hourschedule option so you can enter specific values that aren't in the
+						defaults.
 					<div class="mb-3">
 						<div class="input-group">
 							<label class="col-form-label" for="customhourschedule_value">Hour schedule: </label>
@@ -819,10 +821,7 @@
 							Changes
 						<ul>
 							<li>
-								Added option to not save this current session instead of only the entire day. This allows to reload the window without needing to uncheck the today box.
-							</li>
-							<li>
-								Added option for custom hour schedule. In the settings you can now enter any value (0 - 24h) so you can have options that aren't in de defaults.
+								Bump bootstrap version.
 							</li>
 						</ul>
 						</p>
@@ -930,19 +929,25 @@
 										<option value="0">0h &ensp;&nbsp;&emsp;&emsp;&emsp;(working overtime)</option>
 										<option value="3.04">3,04h &ensp;&emsp;&emsp;(part-time 2/5, 38h week)</option>
 										<option value="3.12">3,12h &ensp;&emsp;&emsp;(part-time 2/5, 39h week)</option>
-										<option value="3.2">3,2h &ensp;&ensp;&emsp;&emsp;(part-time 2/5, 40h week)</option>
+										<option value="3.2">3,2h &ensp;&ensp;&emsp;&emsp;(part-time 2/5, 40h week)
+										</option>
 										<option value="3.8">3,8h &ensp;&ensp;&emsp;&emsp;(half-time, 38h week)</option>
 										<option value="3.9">3,9h &ensp;&ensp;&emsp;&emsp;(half-time, 39h week)</option>
-										<option value="4">4h &ensp;&nbsp;&emsp;&emsp;&emsp;(half-time, 40h week)</option>
+										<option value="4">4h &ensp;&nbsp;&emsp;&emsp;&emsp;(half-time, 40h week)
+										</option>
 										<option value="4.56">4,56h &ensp;&emsp;&emsp;(part-time 3/5, 38h week)</option>
 										<option value="4.68">4,68h &ensp;&emsp;&emsp;(part-time 3/5, 39h week)</option>
-										<option value="4.8">4,8h &ensp;&ensp;&emsp;&emsp;(part-time 3/5, 40h week)</option>
+										<option value="4.8">4,8h &ensp;&ensp;&emsp;&emsp;(part-time 3/5, 40h week)
+										</option>
 										<option value="6.08">6,08h &ensp;&emsp;&emsp;(part-time 4/5, 38h week)</option>
 										<option value="6.24">6,24h &ensp;&emsp;&emsp;(part-time 4/5, 39h week)</option>
-										<option value="6.4">6,4h &ensp;&ensp;&emsp;&emsp;(part-time 4/5, 40h week)</option>
-										<option value="7.6" selected>7,6h &ensp;&ensp;&emsp;&emsp;(full-time, 38h week)</option>
+										<option value="6.4">6,4h &ensp;&ensp;&emsp;&emsp;(part-time 4/5, 40h week)
+										</option>
+										<option value="7.6" selected>7,6h &ensp;&ensp;&emsp;&emsp;(full-time, 38h week)
+										</option>
 										<option value="7.8">7,8h &ensp;&ensp;&emsp;&emsp;(full-time, 39h week)</option>
-										<option value="8">8h &ensp;&nbsp;&emsp;&emsp;&emsp;(full-time, 40h week)</option>
+										<option value="8">8h &ensp;&nbsp;&emsp;&emsp;&emsp;(full-time, 40h week)
+										</option>
 										<!--
 										&nbsp; (adds a single space)
 										&ensp; (about the width of two normal spaces)
