--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
 	<link href="css/all.min.css" rel="stylesheet" defer>
 	<!-- Custom Styles -->
 	<link href="css/bootstrap_specific_style.css" rel="stylesheet" defer>
-	<!-- Moment.js -->
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/moment@2.30.1/min/moment.min.js" defer></script>
-	<!-- https://momentjs.com/docs -->
+	<!-- Day.js -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js" defer></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/duration.js" defer></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/isSameOrBefore.js" defer></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/customParseFormat.js"
+		defer></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/utc.js" defer></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/isBetween.js" defer></script>
+	<!-- https://day.js.org/docs/en/installation/installation -->
 	<!-- Custom scripting -->
 	<script type="text/javascript" src="js/javascript.js" defer></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" defer></script>
@@ -58,7 +64,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20250918.1</span> <br>
+						Version: <span id="currentappversion">20250918.2</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -823,6 +829,15 @@
 							<li>
 								Updated dependencies to their latest versions so you guys get the latest and
 								greatest ;)
+							</li>
+							<li>
+								As this is a time tracking tool, time calculations are one of the most important
+								things and javascript can make it very hard to do these.<br>
+								1 of the dependencies was moment.js which helps with that.<br>
+								Moment.js is now in maintenance mode and the team advises to look for alternatives.<br>
+								I've replaced moment.js with day.js which is a modern alternative.<br>
+								All time calculations should still be the same, but please report if you find any
+								issues.
 							</li>
 						</ul>
 						</p>
