--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20250918.2</span> <br>
+						Version: <span id="currentappversion">20250918.3</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -845,7 +845,7 @@
 							Bugfixes
 						<ul>
 							<li>
-								None.
+								Small bugfix.
 							</li>
 						</ul>
 						</p>
@@ -882,9 +882,9 @@
 								<label class="col-form-label" for="break_time_default" data-bs-toggle="tooltip"
 									data-bs-placement="left"
 									title="Choose a default break you take every day. Eg: You're deducted 30 min every day. This value will be saved for the next time the window is opened.You can enter a seperate value manually or by using the buttons too.">
-									Break with default
+									Break<span id="break_time_default_label"> with default</span>
 								</label>
-								<div class="mb-1 mb-md-0 mx-3 me-sm-0">
+								<div id="break_time_default_div" class="mb-1 mb-md-0 mx-3 me-sm-0">
 									<select name="break_time_default" id="break_time_default"
 										class="form-select mb-md-0 input-fixedwidth90" onchange="addBreakDefault();">
 										<option value="0">0 min</option>
