Fix data import issue not parsing newlines correctly

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20250919.1</span> <br>
+						Version: <span id="currentappversion">20250922.1</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -849,6 +849,9 @@
 							</li>
 							<li>
 								Fixed a bug for custom hour schedule where "null" values were displayed.
+							</li>
+							<li>
+								Fixed issue with data import and new lines.
 							</li>
 						</ul>
 						</p>
