Hide info button because of little added value

--- a/index.html
+++ b/index.html
@@ -1169,8 +1169,8 @@
 						data-bs-target="#modalreporting"><i class="fas fa-chart-line"></i></button>
 					<button title="About" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4"
 						data-bs-toggle="modal" data-bs-target="#modalabout"><i class="fas fa-info"></i></button>
-					<button title="Info" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4"
-						data-bs-toggle="modal" data-bs-target="#modalinfo"><i class="fas fa-lightbulb"></i></button>
+					<!-- <button title="Info" type="button" class="btn btn-outline-secondary middlebtn footerbtn py-1 px-4"
+						data-bs-toggle="modal" data-bs-target="#modalinfo"><i class="fas fa-lightbulb"></i></button> -->
 					<button title="Settings" type="button"
 						class="btn btn-outline-secondary rightbtn footerbtn py-1 px-4" data-bs-toggle="modal"
 						data-bs-target="#modalsettings"><i class="fas fa-cog"></i></button>
