--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	<script type="text/javascript" src="js/graphs.js" defer></script>
 	<script type="text/javascript" src="js/editable_table.js" defer></script>
 	<script type="text/javascript" src="js/introduction.js" defer></script>
-	<script type="text/javascript" src="js/animations.js" async></script>
 	<script type="text/javascript" src="js/notifications.js" async></script>
+	<script type="text/javascript" src="js/animations.js" async></script>
 </head>
 
 <body>
@@ -64,7 +64,7 @@
 					<p>
 						Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a>
 						(Send me a message with feedback or suggestions ;) )<br>
-						Version: <span id="currentappversion">20251006.1</span> <br>
+						Version: <span id="currentappversion">20251014.1</span> <br>
 						Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"
 							target="_blank">Check the master branch on Github</a>
 					</p>
@@ -827,7 +827,7 @@
 							Changes
 						<ul>
 							<li>
-								Added new animations when your time is finished. Discover the 4 different!
+								Added new animations when your time is finished. Discover them all!
 							</li>
 						</ul>
 						</p>
